# opsy

./: .coveragerc  .dockerignore  .gitignore  .jscsrc  .mailmap  .travis.yml  AUTHORS  Dockerfile  Gruntfile.js  LICENSE  MANIFEST.in  Makefile  README.md  build-requirements.txt  hourglass.ini.sample  hourglass.json  hourglass.json.sample  opsy.ini  opsy.ini.example  opsy.toml.example  package.json  pylintrc  requirements-dev.txt  requirements.txt  run.py  server.py  setup.cfg  setup.py  test-requirements.txt  tox.ini  wsgi.py
.circleci/: config.yml
contrib/: hourglass.ini  hourglass.ini.sample  opsy.ini  uwsgi.ini  wsgi.py
contrib/uwsgi/: hourglass-uwsgi.ini  opsy-uwsgi.ini  scheduler.py  wsgi.py
debian/: changelog  control  hourglass.install  hourglass.triggers  opsy.install  rules
helm/: index.yaml  opsy-0.0.1+0.3.1.0rc2.tgz  opsy-0.0.1+0.3.1.0rc3.tgz
helm/opsy/: Chart.yaml  values.yaml
helm/opsy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  database_migration.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
hourglass/: __init__.py  app.py  command_line.py  exceptions.py  scheduler.py  shell.py  utils.py
hourglass/backends/: __init__.py  cache.py  plugin.py  poller.py
hourglass/backends/sensu/: __init__.py  cache.py  plugin.py  poller.py
hourglass/models/: __init__.py  api.py  poller.py
hourglass/models/backends/: __init__.py
hourglass/static/css/: datatables  datatables-responsive  hourglass.css
hourglass/templates/: about.html  checks.html  events.html  layout.html  main.html
hourglass/views/api/: __init__.py  views.py
hourglass/views/main/: views.py  (+1 more)
migrations/versions/: 22d14acc37df_initial_schema.py  b0ee04f071c6_add_ldap_user_column_to_user_model.py  e3a769d9438f_add_core_stuff.py
opsy/: __init__.py  access.py  api.py  app.py  auth.py  config.py  db.py  exceptions.py  extensions.py  flask_extensions.py  logging.py  main.py  models.py  rbac.py  resources.py  routes.py  scheduler.py  schema.py  server.py  shell.py  utils.py  views.py
opsy/auth/: __init__.py  access.py  models.py  resources.py  schema.py  utils.py  views.py
opsy/backends/: __init__.py  cache.py
opsy/inventory/: models.py  resources.py  schema.py  views.py
opsy/monitoring/: access.py  models.py  schema.py
opsy/plugins/: base.py
opsy/templates/: about.html  layout.html  login.html
scripts/: entrypoint.sh
static/css/: bootstrap
static/js/: jquery
templates/: events.html  index.html  layout.html  main.html
tests/: conftest.py  test_opsy_config.ini  test_opsy_config.toml
tests/app/: test_app.py  test_auth_utils.py  test_rbac.py  test_utils.py
tests/data/: auth.py  fake_opsy_config.ini  fake_opsy_config.toml  fake_opsy_config_no_db.ini  fake_opsy_config_no_db.toml  fake_opsy_config_no_ldap_host.toml  fake_opsy_config_no_secret_key.ini  fake_opsy_config_no_secret_key.toml  fake_opsy_config_no_section.ini  fake_opsy_config_no_ssl.toml  inventory.py
tests/models/: test_auth.py  test_base.py  test_inventory.py
tests/schema/: test_auth.py  test_base.py  test_inventory.py
tests/views/: test_auth.py  test_inventory.py
(+101 files in other folders)
