[metadata]
name = Opsy
summary = A multi-user/group web dashboard for Sensu
author = Opsy
description-file =
    README.md
home-page = https://github.com/cryptk/opsy
requires-python = >=3.4.3
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[files]
packages =
    opsy

[extras]
dev =
    ipython==7.2.0
testing =
    pylint==2.2.2
    pylint-flask==0.5
    pycodestyle==2.4.0
    pydocstyle==3.0.0

[wheel]
universal = 1

[entry_points]
console_scripts =
    opsy = opsy.shell:main
opsy.plugin =
    monitoring = opsy.plugins.monitoring:MonitoringPlugin
opsy.command =
    monitoring = opsy.plugins.monitoring.shell:monitoring_cli
opsy.monitoring.backend =
    sensu = opsy.plugins.monitoring.backends.sensu:SensuZone
