[metadata]
name = Opsy
summary = A multi-user/role inventory system
author = Opsy
description-file =
    README.md
home-page = https://github.com/cryptk/opsy
requires-python = >=3.6.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Monitoring

[files]
packages =
    opsy

[extras]
dev =
    ipython==7.2.0
testing =
    pylint==2.2.2
    pylint-flask==0.6
    pycodestyle==2.4.0
    pydocstyle==3.0.0

[wheel]
universal = 1

[entry_points]
console_scripts =
    opsy = opsy.shell:main
opsy.monitoring.backend =
    sensu = opsy.monitoring.backends.sensu:SensuBackend
