[metadata]
name = Opsy
summary = A multi-user/role inventory system
author = Opsy
description-file = README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
home-page = https://github.com/testeddoughnut/opsy
requires-python = >=3.6.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Systems Administration

[files]
packages =
    opsy
data_files =
    opsy_data/etc/opsy =
        opsy.toml.example
    opsy_data/migrations = migrations/*

[extras]

[entry_points]
console_scripts =
    opsyctl = opsy.shell:main
opsy.monitoring.backend =
    sensu = opsy.monitoring.backends.sensu:SensuBackend

[tool:pytest]
mocked-sessions=opsy.flask_extensions.db.session
